# 3rd_imdc_ifgw_inframind-proteus

./: .gitignore  README.md  pyproject.toml  setup_env.py
.dvc/: config
data/: .gitignore  README.md  data_imdc_2026.dvc  uf_table.csv
docs/: data_contracts.md
outputs/: README.md
predictions/: README.md
src/: README.md  get_episcanner.py  make_uf_table.py
src/prototypes/: explore_mosqlimate_data.ipynb  proto_renewal_model.py
