[project]
name = "inframind-proteus"
description = "Dynamic and statistical model for the 3rd Infodengue-Mosqlimate Dengue Challenge (IMDC)."
authors = [
  {name = "Paulo C. Ventura", email = "paulo.pc.vs@gmail.com"},
    # TODO: Add others
]
version = "0.1.0"
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
#    "mosqlient==1.5.2",  # Working, but lacks some features.
    "mosqlient>=2.1.2",
    "epiweeks>=2.3.0",
    "jupyter>=1.0.0",
    "pmdarima>=2.0.4",
    "python-dotenv>=1.0.1",

]
package = true

[project.optional-dependencies]
dev = [
  "plotly>=6.0.0",
  "nbdime>=4.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]


