[project]
name = "inframind-proteus"
description = "Dynamic and statistical model for the 3rd Infodengue-Mosqlimate Dengue Challenge (IMDC)."
authors = [
  {name = "Paulo C. Ventura", email = "paulo.pc.vs@gmail.com"},
    # TODO: Add others
]
version = "0.1.0"
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "mosqlient>=2.1.2",
    "epiweeks>=2.3.0",
    "jupyter>=1.0.0",
    "python-dotenv>=1.0.1",
    "scikit-learn>=1.8.0",
    "numpy>=2.4.4",
    "pandas>=2.3.3",
    "statsmodels>=0.14.6",
    "scipy>=1.16.3",
]
package = true

[project.optional-dependencies]
dev = [
    "plotly>=6.0.0",
    "nbdime>=4.0.1",
    "dvc>=3.59",
    "dvc-ssh",
    "numba>=0.63.1",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]


